created auth and dashbaord pages

--- a/src/app/authentication/page-not-found/page-not-found.component.html
+++ b/src/app/authentication/page-not-found/page-not-found.component.html
@@ -1,1 +1,24 @@
-<p>page-not-found works!</p>
+<div class="auth-container">
+    <div class="col-sm-6 auth-form-section" >
+            <div class="auth-wrapper" >
+                    <form>
+                            <span class="error-header"> 404 </span>
+                            <br>
+                            <span class="error-subheader"> Looks Like You're Lost </span>
+                            <br>
+                            <span class="error-subheader2"> The Page You Are Looking For is Not Available! </span>
+                            <div class="container-auth-form-btn">
+                                <button mat-raised-button color="primary" class="auth-form-btn" type="submit">
+                                Go To Home Page
+                                </button>
+                            </div>
+                    </form>
+                    <span class="txt1">
+                        <a routerLink="/authentication/signin" class="helptxt"> 
+                            Need Help?
+                        </a>
+                    </span>
+                     
+            </div>
+    </div>
+</div>
